
[TestApplicationGenerator_Generate/with_custom_registry_host_and_port - 1]
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: ksail
  namespace: argocd
spec:
  destination:
    namespace: default
    server: https://kubernetes.default.svc
  project: default
  source:
    directory:
      recurse: true
    path: .
    repoURL: oci://custom-registry.localhost:8080/my-project
    targetRevision: latest
  syncPolicy:
    automated:
      prune: true
      selfHeal: true

---

[TestApplicationGenerator_Generate/with_default_values - 1]
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: ksail
  namespace: argocd
spec:
  destination:
    namespace: default
    server: https://kubernetes.default.svc
  project: default
  source:
    directory:
      recurse: true
    path: .
    repoURL: oci://ksail-registry.localhost:5000/ksail
    targetRevision: latest
  syncPolicy:
    automated:
      prune: true
      selfHeal: true

---

[TestApplicationGenerator_Generate/with_empty_project_name_uses_default - 1]
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: ksail
  namespace: argocd
spec:
  destination:
    namespace: default
    server: https://kubernetes.default.svc
  project: default
  source:
    directory:
      recurse: true
    path: .
    repoURL: oci://registry.localhost:5000/ksail
    targetRevision: latest
  syncPolicy:
    automated:
      prune: true
      selfHeal: true

---

[TestApplicationGenerator_Generate/with_zero_port_uses_default - 1]
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: ksail
  namespace: argocd
spec:
  destination:
    namespace: default
    server: https://kubernetes.default.svc
  project: default
  source:
    directory:
      recurse: true
    path: .
    repoURL: oci://registry.localhost:5000/test-project
    targetRevision: latest
  syncPolicy:
    automated:
      prune: true
      selfHeal: true

---
